pop up and waves

--- a/app/exapmle_article.html
+++ b/app/exapmle_article.html
@@ -121,7 +121,7 @@
 <div class="footer-wave">
     <div class="container">
         <div class="row flex-centered">
-            <div class="col-lg-9">
+            <div class="col-lg-9 mp-mb20">
                 <div class="article-styles__content">
                     <p>
                         В Сколковском институте науки и технологий (Сколтех) состоялся лидер-форум «Аддитивные
