--- a/app/guidline.html
+++ b/app/guidline.html
@@ -91,17 +91,21 @@
 
 
 
-<div class="footer-wave">
+<div class="wave-header">
     <div class="guidline-title__container">
+
         <h2 class="site-h2__section-divider">Фирменный стиль</h2>
     </div>
-
+    </div>
     <div class="guidline__btn-container">
         <div class="container">
             <a href="#" class="main-button blue-article">Скачать логотипы</a>
             <a href="#" class="main-button blue-article">Скачать брендбук</a>
         </div>
     </div>
+
+
+<div class="footer-wave">
     <div class="container">
         <h2 class="site-h2__section-divider mp-mb20">Примеры использования <br>
             фирменного стиля</h2>
