--- a/app/materials.html
+++ b/app/materials.html
@@ -90,10 +90,18 @@
 </header>
 
 
-<div class="footer-wave">
+<div class="wave-header">
+
+
+    <div class="container">
+        <br>
+        <h2 class="site-h2__section-divider">Материалы</h2>
+    </div>
+</div>
     <section class="printers-after-header__section">
-        <div class="container">
-            <h2 class="site-h2__section-divider">Материалы</h2>
+
+        <div class="footer-wave">
+            <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 mp-mb20">
                     <div class="printers-after-header__item-container">
