--- a/app/related_equipment.html
+++ b/app/related_equipment.html
@@ -90,9 +90,14 @@
 </header>
 
 
+<div class="wave-header">
+    <br>
+    <h2 class="site-h2__section-divider">Сопутствующее оборудование</h2>
+</div>
+
 <section class="printers-after-header__section">
     <div class="container">
-        <h2 class="site-h2__section-divider">Сопутствующее оборудование</h2>
+
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
@@ -207,7 +212,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
@@ -234,7 +239,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -274,7 +279,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -304,7 +309,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -334,7 +339,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -366,7 +371,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -398,7 +403,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
@@ -430,7 +435,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
