--- a/app/road_map.html
+++ b/app/road_map.html
@@ -89,8 +89,10 @@
     </div>
 </header>
 
+<div class="wave-header">
 <div class="guidline-title__container">
     <h2 class="site-h2__section-divider">Дорожная карта</h2>
+</div>
 </div>
 
 <div class="footer-wave">
