--- a/app/virtual_printer.html
+++ b/app/virtual_printer.html
@@ -89,10 +89,11 @@
     </div>
 </header>
 
+<div class="wave-header">
 <div class="guidline-title__container">
     <h2 class="site-h2__section-divider">Виртуальный принтер</h2>
 </div>
-
+</div>
 <div class="footer-wave">
     <div class="container">
         <div class="row flex-centered zoom-gallery gallery">
