--- a/app/gallery.html
+++ b/app/gallery.html
@@ -90,9 +90,13 @@
 </header>
 
 
-<div class="footer-wave">
+<div class="wave-header">
     <div class="container">
         <h2 class="site-h2__section-divider">Фотогалерея</h2>
+    </div>
+</div>
+        <div class="footer-wave">
+            <div class="container">
         <div class="row flex-centered zoom-gallery gallery">
             <div class="col-lg-4 col-md-6 col-sm-12"><a href="img/gallery/img-1.jpg"><img src="img/gallery/img-1.jpg"
                                                                                           alt=""></a></div>
@@ -131,6 +135,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12"><a href="img/gallery/img-18.jpg"><img src="img/gallery/img-18.jpg"
                                                                                            alt=""></a></div>
         </div>
+
     </div>
 </div>
 
