--- a/app/metal_powders.html
+++ b/app/metal_powders.html
@@ -89,10 +89,16 @@
     </div>
 </header>
 
+<div class="wave-header">
+<div class="container">
+    <br>
+    <h2 class="site-h2__section-divider">Металлические порошки</h2>
+</div>
+</div>
 
 <section class="printers-after-header__section">
     <div class="container">
-        <h2 class="site-h2__section-divider">Металлические порошки</h2>
+
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
@@ -183,7 +189,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
@@ -240,7 +246,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
