--- a/app/our_projects.html
+++ b/app/our_projects.html
@@ -89,11 +89,16 @@
     </div>
 </header>
 
+<div class="wave-header">
+    <br>
+    <h2 class="site-h2__section-divider">Наши проекты</h2>
+</div>
+
 
 <div class="footer-wave">
     <section class="printers-after-header__section">
         <div class="container">
-            <h2 class="site-h2__section-divider">Наши проекты</h2>
+
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 mp-mb20">
                     <div class="printers-after-header__item-container">
