--- a/app/poliamids.html
+++ b/app/poliamids.html
@@ -89,14 +89,19 @@
     </div>
 </header>
 
-
+<div class="wave-header">
 <section class="printers-after-header__section">
+
     <div class="container">
         <h2 class="site-h2__section-divider">Полиамиды</h2>
     </div>
+
 </section>
+</div>
+
 
 <section class="metal_powders-__section metal_powders-text-styles">
+    <div class="footer-wave">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -146,6 +151,8 @@
             </div>
         </div>
     </div>
+    </div>
+</section>
 
 
 
@@ -224,6 +231,7 @@
 
 
 <script src="js/scripts.min.js"></script>
+
 
 </body>
 </html>
