--- a/app/services.html
+++ b/app/services.html
@@ -101,8 +101,9 @@
         </nav>
     </div>
 </header>
-
+<div class="wave-header">
 <section class="section-white-bg" >
+
     <div class="container">
         <div class="row">
             <div class="col-md-3 wow fadeInUp animated">
@@ -155,8 +156,9 @@
             </div>
         </div>
     </div>
-</section>
 
+</section>
+</div>
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
         <h2 class="metal_powders__title">3D-печать</h2>
@@ -344,6 +346,8 @@
     </div>
 </section>
 
+
+<div class="footer-wave">
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
         <h2 class="metal_powders__title">Тренинги</h2>
@@ -384,7 +388,7 @@
         <a href="#small-dialog" class="main-button blue-article change-width-button">Записаться на курс</a>
     </div>
 </section>
-
+</div>
 
 
 
