--- a/app/videogallery.html
+++ b/app/videogallery.html
@@ -90,9 +90,13 @@
 </header>
 
 
-<div class="footer-wave">
+<div class="wave-header">
     <div class="container">
         <h2 class="site-h2__section-divider">Видеогалерея</h2>
+    </div>
+</div>
+<div class="footer-wave">
+    <div class="container">
         <div class="row flex-centered zoom-gallery gallery">
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <a class="popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto">
