hope this is last my commit ever

--- a/app/exapmle_article.html
+++ b/app/exapmle_article.html
@@ -94,7 +94,7 @@
             <div class="col-lg-7 offset-lg-1">
                 <div class="rusmelt__offer">
                     <div class="rusmelt__title-container">
-                        <h1 class="rusmelt__title">На форуме, организованном Росатомом, обсудили дорожную карту развития
+                        <h1 class="rusmelt__title font-light_custom">На форуме, организованном Росатомом, обсудили дорожную карту развития
                             в России аддитивных технологий</h1>
                     </div>
                     <div class="rusmelt-data__article">
@@ -165,7 +165,7 @@
                     </p>
                 </div>
                 <a href="#" class="main-button blue-article">
-                    Перейти в раздел “Полезные Статьи”
+                    Перейти в раздел “Новости”
                 </a>
             </div>
         </div>
