--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
                     <li class="nav-item dropdown menu__item">
                         <a class="nav-link menu__link" href="#">Продукция</a>
                         <ul class="dropdown-menu" >
-                            <li><a href="printers.html" class="dropdown-item">3D-принтеры</a></li>
+                            <li><a href="threed_printers.html" class="dropdown-item">3D-принтеры</a></li>
                             <li><a href="materials.html" class="dropdown-item">Материалы</a></li>
                             <li><a href="calculator.html" class="dropdown-item">Расчет стоимости</a></li>
                             <li><a href="related_equipment.html" class="dropdown-item">Сопутствующее оборудование</a></li>
@@ -108,15 +108,16 @@
             poster="img/main_page-bg.jpg">
         </video>
     </div>
-    <div class="main-page__section-after-header__logo-container">
-        <a href="#"><img src="img/logo.svg" alt="" class="i-re"></a>
-        <a href="#"><img src="img/tvel.svg" alt="" class="i-re"></a>
-    </div>
-    <div class="container">
+
+    <div class="container position-relative">
+        <div class="main-page__section-after-header__logo-container">
+            <a href="#"><img src="img/logo.svg" alt="" class="i-re"></a>
+            <a href="#"><img src="img/tvel.svg" alt="" class="i-re"></a>
+        </div>
         <div class="row">
             <div class="col-xl-12 section-after-heder__container">
                 <h1 class="rusatom__title">РУСАТОМ</h1>
-                <p class="rusatom__caption">аддитивные технологии</p>
+                <p class="rusatom__caption"÷>аддитивные технологии</p>
                 <p class="rusatom__description">Единый отраслевой интегратор Госкорпорации<br>«Росатом» по направлению
                     «Аддитивные технологии»</p>
                 <p class="rusatom__offer">представляет 3D-принтер RusMelt 300M</p>
@@ -196,7 +197,7 @@
 
                             <div class="block-info__inner-container">
                                 <strong>
-                                    <span class="t-titl" >ООО «РусАТ» и Hunan Farsoon High-tech Co., Ltd (Китай) заключили меморандум о взаимопонимании в области аддитивных технологий ...</span>
+                                    <span class="t-titl" >ООО «РусАТ» и Hunan Farsoon High-tech Co., Ltd (Китай) заключили меморандум о взаимопонимании технологий</span>
                                 </strong>
                                 <a class="main-button blue" href="#">Читать</a>
                             </div>
@@ -442,7 +443,7 @@
             </div>
             <div class="col-md-2 footer__group">
                 <h6 class="footer__title">Продукция</h6>
-                <a class="footer__link" href="#">3D-принтеры</a>
+                <a class="footer__link" href="threed_printers.html">3D-принтеры</a>
                 <a class="footer__link" href="#">Материалы</a>
                 <a class="footer__link" href="#">Расчет стоимости</a>
                 <a class="footer__link" href="#">Сопутствующее оборудование</a>
