--- a/app/related_equipment.html
+++ b/app/related_equipment.html
@@ -103,7 +103,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Пылесос промышленный (гидросепаратор) для сбора остатков порошка</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related1" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Бокс перчаточный с инертной средой для пересыпки порошканконель</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related2" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Оборудование пробоподготовки</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related3" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">3Д-сканеры - средства оптического измерения</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related4" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Установка просева порошков</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related5" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Установка пескоструйная</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related6" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Обрабатывающий центр для постобработки изделий после 3D-печати</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related7" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Печь вакуумная</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related8" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Отрезной станок эрозионной резки</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#related9" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
 
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Промышленный пылесос</h2>
+        <h2 class="metal_powders__title" id="related1">Промышленный пылесос</h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
@@ -218,7 +218,7 @@
 
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Перчаточный бокс </h2>
+        <h2 class="metal_powders__title" id="related2">Перчаточный бокс </h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
@@ -244,7 +244,7 @@
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">ТКИиИКД</h2>
+        <h2 class="metal_powders__title" id="related3">ТКИиИКД</h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
@@ -284,7 +284,7 @@
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Герметичная просеивающая установка </h2>
+        <h2 class="metal_powders__title" id="related4">Герметичная просеивающая установка </h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
@@ -314,7 +314,7 @@
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Камера пескоструйная</h2>
+        <h2 class="metal_powders__title" id="related5">Камера пескоструйная</h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
@@ -344,7 +344,7 @@
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Обрабатывающий центр</h2>
+        <h2 class="metal_powders__title" id="related6">Обрабатывающий центр</h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
@@ -376,7 +376,7 @@
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Печь вакуумная</h2>
+        <h2 class="metal_powders__title" id="related7">Печь вакуумная</h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
@@ -410,7 +410,7 @@
 <div class="footer-wave">
 <section class="metal_powders-__section metal_powders-text-styles metal_powders-text-styles">
     <div class="container">
-        <h2 class="metal_powders__title">Отрезной станок эрозионной резки </h2>
+        <h2 class="metal_powders__title" id="related9">Отрезной станок эрозионной резки </h2>
         <div class="row">
             <div class="col-md-4">
                 <img src="img/videogallery_placeholder.jpg" alt="" class="i-re">
