--- a/app/sls_printers.html
+++ b/app/sls_printers.html
@@ -132,7 +132,7 @@
     </div>
 </section>
 
-<section id="rusmelt" class="rusmelt">
+<section id="rusmelt" class="rusmelt rusmelt_darker">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-4">
@@ -790,7 +790,7 @@
     </div>
 </section>
 
-<section id="rusmelt2" class="rusmelt">
+<section id="rusmelt2" class="rusmelt rusmelt_darker">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-7 offset-lg-1">
