--- a/app/exapmle_news.html
+++ b/app/exapmle_news.html
@@ -94,7 +94,7 @@
             <div class="col-lg-7 offset-lg-1">
                 <div class="rusmelt__offer">
                     <div class="rusmelt__title-container">
-                        <h1 class="rusmelt__title">На форуме, организованном Росатомом, обсудили дорожную карту развития
+                        <h1 class="rusmelt__title font-light_custom">На форуме, организованном Росатомом, обсудили дорожную карту развития
                             в России аддитивных технологий</h1>
                     </div>
                 </div>
@@ -158,7 +158,8 @@
                 </div>
 
                 <a href="#" class="main-button blue-article">
-                    Перейти в раздел “Новости”
+
+                    Перейти в раздел “Полезные Статьи”
                 </a>
             </div>
         </div>
