printer pages fixes

--- a/app/sls_printers.html
+++ b/app/sls_printers.html
@@ -133,7 +133,7 @@
 </section>
 
 <section id="rusmelt" class="rusmelt rusmelt_darker">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-lg-4">
                 <div class="rusmelt__image">
@@ -149,7 +149,7 @@
                     <p class="rusmelt__caption">Высокопроизводительная российская система селективного лазерного плавления</p>
                 </div>
             </div>
-            <div class="col-lg-2 offset-lg-2">
+            <div class="col-lg-3 offset-lg-1">
                 <div class="rusmelt__links">
                     <a class="rusmelt__link" href="https://www.rosatom.ru/"><img src="src/rosatom.svg" alt="РОСАТОМ"/></a>
                     <a class="rusmelt__link" href="https://www.tvel.ru/"><img src="src/tvel.svg" alt="ТВЭЛ"/></a>
@@ -462,7 +462,7 @@
 </section>
 
 <section id="rusmelt1" class="rusmelt rusmelt_darker">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-lg-4">
                 <div class="rusmelt__image">
@@ -478,7 +478,7 @@
                     <p class="rusmelt__caption">Высокопроизводительная российская система селективного лазерного плавления</p>
                 </div>
             </div>
-            <div class="col-lg-2 offset-lg-2">
+            <div class="col-lg-3 offset-lg-1">
                 <div class="rusmelt__links">
                     <a class="rusmelt__link" href="https://www.rosatom.ru/"><img src="src/rosatom.svg" alt="РОСАТОМ"/></a>
                     <a class="rusmelt__link" href="https://www.tvel.ru/"><img src="src/tvel.svg" alt="ТВЭЛ"/></a>
@@ -791,9 +791,9 @@
 </section>
 
 <section id="rusmelt2" class="rusmelt rusmelt_darker">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-7 offset-lg-1">
+            <div class="col-lg-8 ">
                 <div class="rusmelt__offer">
                     <div class="rusmelt__title-container">
                         <h1 class="rusmelt__title">Линейка принтеров “2М”</h1>
@@ -802,7 +802,7 @@
                     <p class="rusmelt__caption">Высокопроизводительная российская система селективного лазерного плавления</p>
                 </div>
             </div>
-            <div class="col-lg-2 offset-lg-2">
+            <div class="col-lg-3 offset-lg-1">
                 <div class="rusmelt__links">
                     <a class="rusmelt__link" href="https://www.rosatom.ru/"><img src="src/rosatom.svg" alt="РОСАТОМ"/></a>
                     <a class="rusmelt__link" href="https://www.tvel.ru/"><img src="src/tvel.svg" alt="ТВЭЛ"/></a>
