bg whiter for video

--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
         </video>
     </div>
 
-    <div class="container position-relative">
+    <div class="container position-relative z-index-mp">
         <div class="main-page__section-after-header__logo-container">
             <a href="#"><img src="img/logo.svg" alt="" class="i-re"></a>
             <a href="#"><img src="img/tvel.svg" alt="" class="i-re"></a>
@@ -125,9 +125,9 @@
             </div>
         </div>
     </div>
-    <img src="img/main-page_img-printer.png" alt="" class="i-re main-photo wow animated slideInUp"
+    <img src="img/main-page_img-printer.png" alt="" class="i-re main-photo"
          data-wow-duration="2s">
-    <div class="mp__arrow-down flex-centered pulse animated infinite ">
+    <div class="mp__arrow-down flex-centered pulse animated infinite z-index-mp ">
         <a href="#scrool-to-this-block"><img src="img/main-page_arrow-down.svg" alt="" class="i-re"></a>
     </div>
 </section>
